--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="ru">
 
 	<head>
 		<title>Test</title>
@@ -63,7 +63,7 @@
 	</div>
 
 
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	</body>
 
 
